# MAGE

./: .gitignore  CMakeLists.txt  README.md
CMake/: FindCatch.cmake  FindGLEW.cmake  FindGLFW.cmake  FindOgg.cmake  FindOpenAL-Soft.cmake  FindSTB.cmake  FindTinyObj.cmake  FindVorbis.cmake  FindVulkan.cmake
contrib/catch/: CMakeLists.txt
contrib/ogg/lib/Debug/x64/: ogg.lib
contrib/ogg/lib/Release/x64/: ogg.lib
contrib/openal-soft/libs/Release/x64/: OpenAL32.lib
contrib/vorbis/lib/Debug/x64/: vorbis.lib  vorbisenc.lib  vorbisfile.lib
contrib/vorbis/lib/Release/x64/: vorbis.lib  vorbisenc.lib  vorbisfile.lib
mage/: CMakeLists.txt
mage/audio/include/audio/: AudioDevice.h  AudioSystem.h  AudioWorld.h  SoundEffectSystem.h  SoundLibrary.h  SoundListenerSystem.h
mage/audio/src/: AudioDevice.cpp  AudioSystem.cpp  AudioWorld.cpp  SoundEffectSystem.cpp  SoundLibrary.cpp  SoundListenerSystem.cpp
mage/contrib_src/: tiny_obj_loader.cpp
mage/core/include/core/: Application.h  EntityHandle.h  Timer.h  World.h
mage/core/src/: Application.cpp  EntityHandle.cpp  Timer.cpp  World.cpp
mage/ecs/: CMakeLists.txt
mage/ecs/include/ecs/: Component.h  ComponentManager.h  ComponentMask.h  Entity.h  EntityHandle.h  EntityManager.h  GameSystem.h  GameWorld.h  RenderingSystem.h  System.h  SystemManager.h  World.h
mage/ecs/src/: Component.cpp  ComponentManager.cpp  ComponentMask.cpp  Entity.cpp  EntityHandle.cpp  EntityManager.cpp  GameSystem.cpp  GameWorld.cpp  RenderingSystem.cpp  System.cpp  SystemManager.cpp  World.cpp
mage/ecs_common/include/ecs_common/: CameraComponent.h  TransformComponent.h
mage/ecs_common/src/: CameraComponent.cpp
mage/exceptions/include/exceptions/: RuntimeError.h
mage/exceptions/src/: RuntimeError.cpp
mage/filesystem/include/filesystem/: Filesystem.h
mage/filesystem/src/: Filesystem.cpp
mage/graphics/: CMakeLists.txt
mage/graphics/include/graphics/: BlurPipeline.h  Camera.h  CopyToTargetPipeline.h  Material.h  Mesh.h  NullPostProcessPass.h  OBJModel.h  OBJModelLibrary.h  OrthographicCamera.h  PerspectiveCamera.h  PostProcessPass.h  PostProcessPipeline.h  RenderWorld.h  RenderingSystem.h  ShaderLibrary.h  ShaderManager.h  SkyboxRenderer.h  SpriteRenderer.h  StaticMesh.h  StaticMeshRenderer.h  Texture2DLibrary.h  Texture2DManager.h  Video.h  VideoHints.h  Window.h
mage/graphics/src/: BlurPipeline.cpp  Camera.cpp  CopyToTargetPipeline.cpp  Material.cpp  Mesh.cpp  NullPostProcessPass.cpp  OBJModel.cpp  OBJModelLibrary.cpp  OrthographicCamera.cpp  PerspectiveCamera.cpp  PostProcessPass.cpp  PostProcessPipeline.cpp  RenderWorld.cpp  RenderingSystem.cpp  ShaderLibrary.cpp  ShaderManager.cpp  SkyboxRenderer.cpp  SpriteRenderer.cpp  StaticMesh.cpp  StaticMeshRenderer.cpp  Texture2DLibrary.cpp  Texture2DManager.cpp  Video.cpp  VideoHints.cpp  Window.cpp
mage/gui/include/gui/: Button.h  ButtonEventHandler.h  ButtonRenderer.h
mage/gui/src/: Button.cpp  ButtonEventHandler.cpp  ButtonRenderer.cpp
mage/input/include/input/: InputKeys.h  InputManager.h
mage/input/src/: InputManager.cpp
mage/logger/include/logger/: FilterPolicies.h  FormatPolicies.h  LogData.h  LogDispatch.h  LogType.h  Logger.h  SourceInfo.h  WriterPolicies.h
mage/logger/src/: LogData.cpp  LogDispatch.cpp  LogType.cpp  SourceInfo.cpp
mage/math/: CMakeLists.txt
mage/math/include/math/: AABB.h  Mat.h  MathUtils.h  Quat.h  Transform.h  Vec.h
mage/math/src/: AABB.cpp  Mat.cpp  MathUtils.cpp  Quat.cpp  Transform.cpp  Vec.cpp
mage/messaging/include/messaging/: MessageBus.h
mage/messaging/src/: MessageBus.cpp
mage/physics/include/physics/: AABBCollisionSystem.h  BasicCollisionResolution.h  MotionIntegrators.h  MotionSystem.h  MovementControlSystem.h  PhysicsSystem.h  PhysicsWorld.h  SpatialPartition.h
mage/physics/src/: AABBCollisionSystem.cpp  BasicCollisionresolution.cpp  MotionIntegrators.cpp  MotionSystem.cpp  MovementControlSystem.cpp  PhysicsWorld.cpp
mage/renderer/include/renderer/: GLBufferLayout.h  GLCommon.h  GLFramebuffer2D.h  GLIndexBuffer.h  GLShader.h  GLTexture2D.h  GLTextureCube.h  GLVertexArray.h  GLVertexBuffer.h  RenderDevice.h  Renderer.h
mage/renderer/src/: GLBufferLayout.cpp  GLCommon.cpp  GLFramebuffer2D.cpp  GLIndexBuffer.cpp  GLShader.cpp  GLTexture2D.cpp  GLTextureCube.cpp  GLVertexArray.cpp  GLVertexBuffer.cpp  RenderDevice.cpp  Renderer.cpp
mage/scheduler/include/scheduler/: ParallelFor.h  ParallelForSplitters.h  Scheduler.h  Task.h  WorkStealingQueue.h
mage/scheduler/src/: Scheduler.cpp  Task.cpp  WorkStealingQueue.cpp
mage/util/include/util/: RandomNumberGenerator.h
mage/util/src/: RandomNumberGenerator.cpp
mage/video/include/video/: InputManager.h  Keyboard.h  Mouse.h  Video.h  VideoHints.h  Window.h
mage/video/src/: InputManager.cpp  Keyboard.cpp  Mouse.cpp  Video.cpp  VideoHints.cpp  Window.cpp
res/shaders/: AdditiveMerge.frag  Blur.frag  DirectCopy.frag  LightKeyPass.frag  ScreenCoordPass.vert  Skybox.frag  Skybox.vert  StaticMesh.frag  StaticMesh.vert  WorldCoordQuad.vert
res/textures/: Thumbs.db
sandbox/: CMakeLists.txt
sandbox/demo/include/demo/: BlurPipeline.h  CameraControlSystem.h  DemoApplication.h  EnemySpawnSystem.h  GameCollisionHandler.h  GameWorld.h  MainWorld.h  MovementControlSystem.h
sandbox/demo/src/: BlurPipeline.cpp  CameraControlSystem.cpp  DemoApplication.cpp  EnemySpawnSystem.cpp  GameCollisionHandler.cpp  GameWorld.cpp  MainWorld.cpp  MovementControlSystem.cpp
sandbox/src/: SandboxApplication.h  SandboxComponents.h  SandboxSystems.h  SandboxWorld.h  main.cpp
tests/: CMakeLists.txt
tests/ecs/: ComponentManagerTests.cpp  ComponentMaskTests.cpp  ComponentTests.cpp  EntityManagerTests.cpp  SystemTests.cpp
tests/math/: AABBTests.cpp  MatTests.cpp  QuatTests.cpp  VecTests.cpp
tests/src/: testsMain.cpp
